tests/ui/suggestions/types/into-inference-needs-type.stderr
error[E0283]: type annotations needed
  --> $DIR/into-inference-needs-type.rs:13:10
   |
LL |         .into()?;
   |          ^^^^
   |
   = note: cannot satisfy `_: From<FilterMap<Map<std::slice::Iter<'_, &str>, {closure@main::{_::map#0}}>, fn(Option<&str>) -> Option<Option<&str>> {Option::<Option<&str>>::Some}>>`
   = note: required for `FilterMap<Map<std::slice::Iter<'_, &str>, {closure@main::{_::map#0}}>, fn(Option<&str>) -> Option<Option<&str>> {Option::<Option<&str>>::Some}>` to implement `Into<_>`
help: try using a fully qualified path to specify the expected types
   |
LL ~     let list = <FilterMap<Map<std::slice::Iter<'_, &str>, _>, _> as Into<T>>::into(vec
LL |         .iter()
LL |         .map(|s| s.strip_prefix("t"))
LL ~         .filter_map(Option::Some))?;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
